--- a/66-FM1-59.html
+++ b/66-FM1-59.html
@@ -33,7 +33,7 @@
         word computer. The LEM computer storage capacity was exceeded by about
         6,000 words for the LORS configuration and 4,5OO words for the radar configuration.</p>
 
-        <p>Since we have asummed a basic ground rule that no routines would be included 
+        <p>Since we have assumed a basic ground rule that no routines would be included 
         in the AS-207/208 programs which are not in the AS-504 program,
         our first task was to reduce the AS-504 program requirements to a point
         where the CSM and LEM programs would fit within the computer storage
