--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     				<td><a href="66-FM1-59.html">Spacecraft computer program requirements for AS-207/208, AS-503, and
             AS-504</a></td>
     			</tr>
+                <tr>
+                    <td>66-FM1-60</td>
+                    <td>May 16 1966</td>
+                    <td><a href="66-FM1-60.html">Comments on the AS-207/208 Preliminary Spacecraft Reference Trajectory</a></td>
+                </tr>
     		</tbody>
     	</table>
     </body>
