Correct Gene Kranz's middle initial

--- a/66-FM1-60.html
+++ b/66-FM1-60.html
@@ -220,7 +220,7 @@
                 <li>FA/R. G. Rose</li>
                 <li>FC/J. D. Hodge</li>
                 <li>FC/D. H. Owen</li>
-                <li>FC2/E. Y. Kranz</li>
+                <li>FC2/E. F. Kranz</li>
                 <li>FC3/A. D. Aldrich</li>
                 <li>C4/M. F. Brooks</li>
                 <li>FC5/G. S. Lunney</li>
