--- a/66-FM1-60.html
+++ b/66-FM1-60.html
@@ -216,13 +216,13 @@
                 <li>PM2/C. H. Perrine</li>
                 <li>PM2/K. L. Turner</li>
                 <li>FA/C. C. Kraft, Jr.</li>
-                <li><li>FA/S. A. Sjoberg</li>
+                <li>FA/S. A. Sjoberg</li>
                 <li>FA/R. G. Rose</li>
                 <li>FC/J. D. Hodge</li>
                 <li>FC/D. H. Owen</li>
                 <li>FC2/E. F. Kranz</li>
                 <li>FC3/A. D. Aldrich</li>
-                <li>C4/M. F. Brooks</li>
+                <li>FC4/M. F. Brooks</li>
                 <li>FC5/G. S. Lunney</li>
                 <li>FC/C. A. Charlesworth</li>
                 <li>FC/P. C. Shaffer</li>
