Initial Jekyll conversion

--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Tindallgrams Index</title>
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
+---
+layout: page
+title: Tindallgrams
+---
+<h1>{{ page.title }}</h1>
+<section>
+    <h1>What are Tindallgrams?</h1>
 
-    	<table>
-    		<tbody>
-    			<tr>
-    				<td>66-FM1-59</td>
-    				<td>May 12 1966</td>
-    				<td><a href="66-FM1-59.html">Spacecraft computer program requirements for AS-207/208, AS-503, and
-            AS-504</a></td>
-    			</tr>
-                <tr>
-                    <td>66-FM1-60</td>
-                    <td>May 16 1966</td>
-                    <td><a href="66-FM1-60.html">Comments on the AS-207/208 Preliminary Spacecraft Reference Trajectory</a></td>
-                </tr>
-    		</tbody>
-    	</table>
-    </body>
-</html>
+    <p>In 1966, as the American space program was working furiously towards a 
+    moon landing, Howard W. “Bill” Tindall, Jr., arrived at MIT to oversee the
+    development of software for the spacecraft guidance systems. Guidance 
+    systems where revoutionary, there was controversy over how astronauts and 
+    computers would share control of the spaceflights, and software was a new 
+    aspect of systems engineering whose importance was vastly underappreciated.
+    Tindall found a lot of brilliant people at MIT working in development 
+    program that was behind schedule, was failing to meet its requirements, and 
+    threatened to become, in his words, “the most pacing item for the Apollo 
+    flights.” He dove into the task of refashioning every aspect of the software 
+    development process, writing a series of frank memos that entered NASA lore
+    under the name “Tindalgrams.”</p>
+
+    <p>Various people kept more or less official collections of these 
+    Tindallgrams, some of which have been available on the internet as PDFs for 
+    years, but there was no simple, searchable, indexable text version. So I 
+    thought it would be interesting to make a Github project out of them. Those 
+    of us who deal with the challenged involved in open source software -- the
+    loosely coordinated software development processes and widely distributed
+    collaborations -- certainly have a lot to learn from Bill Tindall and his
+    success in turning the ideas of a group of smart hackers into a working 
+    system that landed men on the moon and returned them safely to the Earth.</p>
+
+</section>
+
+<section>
+
+    <h1>Index</h1>    
+
+    <table>
+        <tbody>
+            <tr>
+                <td>66-FM1-59</td>
+                <td>May 12 1966</td>
+                <td><a href="66-FM1-59.html">Spacecraft computer program requirements for AS-207/208, AS-503, and
+        AS-504</a></td>
+            </tr>
+            <tr>
+                <td>66-FM1-60</td>
+                <td>May 16 1966</td>
+                <td><a href="66-FM1-60.html">Comments on the AS-207/208 Preliminary Spacecraft Reference Trajectory</a></td>
+            </tr>
+        </tbody>
+    </table>
+</section>
