Add jekyll front-matter

--- a/66-FM1-68.html
+++ b/66-FM1-68.html
@@ -1,3 +1,7 @@
+---
+layout: tindallgram
+title: 66-FM1-60
+---
 <header>
     <div class="to">TO: See list below</div>
     <div class="from">FROM: FM1/Assistant Chief, Mission Planning and Analysis Division</div>
