--- a/66-FM1-68.html
+++ b/66-FM1-68.html
@@ -7,7 +7,7 @@
 </header>
 
 <p>There are a number of us who feel that the computer programs for the 
-Apollo spacecraft will. soon become the most pacing item for the Apollo 
+Apollo spacecraft will soon become the most pacing item for the Apollo 
 flights. This is certainly likely to be the case for AS-207/208, by 
 which time spacecraft, and booster delivery and Cape operations are 
 likely to have become relatively routine, with the shots going pretty 
