--- a/index.html
+++ b/index.html
@@ -2173,46 +2173,94 @@ title: Tindallgrams
                 <td>4</td>
             </tr>
             <tr>
+                <td>69-PA-T-1A</td>
+                <td>Jan 7 1969</td>
+                <td>Let's move the recovery force a little</td>
+                <td>5</td>
+            </tr>
+            <tr>
                 <td>69-PA-T-2A</td>
                 <td>Jan 10 1969</td>
                 <td>Some decisions regarding lunar landmark tracking on the F and G missions</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-3A</td>
                 <td>Jan 14 1969</td>
                 <td>Operations required for communication loss on F and G are sure better than on C'</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-4A</td>
                 <td>Jan 14 1969</td>
                 <td>F and G cis-lunar midcourse correction scheduling</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-5A</td>
+                <td>Jan 14 1969</td>
+                <td>Procedures for LM aborts immediately after landing are terrible!</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-6A</td>
+                <td>Jan 14 1969</td>
+                <td>D Rendezvous Mission Techniques</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-8A</td>
                 <td>Jan 15 1969</td>
                 <td>F and G Lunar Orbital operations - mostly pre-DOI LM activation stuff</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-10A</td>
                 <td>Jan 21 1969</td>
                 <td>F and G mission cis-lunar and abort plan</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-11A</td>
+                <td>Jan 21 1969</td>
+                <td>D Rendezvous Mission Techniques Meeting - January 20, 1969</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-??</td>
+                <td>Feb ? 1969</td>
+                <td>(unreadable)</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-14A</td>
                 <td>Feb 5 1969</td>
                 <td>Two-stage LOI looks good after C'</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-15A (?)</td>
+                <td>Feb ? 1969</td>
+                <td>(unreadable)</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-17A</td>
+                <td>Feb 6 1969</td>
+                <td>MCC-H Ascent Monitoring</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-18A</td>
                 <td>Feb 6 1969</td>
                 <td>F/G cis-lunar midcourse correction mission techniques</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-19A</td>
+                <td>Feb 6 1969</td>
+                <td>Apollo Mission Techniques Documentation Schedule</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-22A</td>
@@ -2224,37 +2272,55 @@ title: Tindallgrams
                 <td>69-PA-T-23A</td>
                 <td>Feb 11 1969</td>
                 <td>F/G Mission Techniques - except for the lunar orbit phase - are ready to eat</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-24A</td>
                 <td>Feb 11 1969</td>
                 <td>F/G Rendezvous Mission Techniques - mostly F</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-FM-T-27</td>
+                <td>Feb 19 1969</td>
+                <td>Apollo spacecraft computer program newsletter</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-27A</td>
+                <td>Feb 19 1969</td>
+                <td>All about F APS burn to depletion and landmark tracking</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-28A</td>
                 <td>Feb 20 1969</td>
                 <td>Descent Abort Mission Techniques</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-29A</td>
+                <td>Feb 25 1969</td>
+                <td>Mission D Maneuver Monitoring Document</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-FM-T-30</td>
                 <td>Feb 20 1969</td>
                 <td>Results of the February 18 Apollo Spacecraft Software Configuration Control Board (ASSCCB) meeting</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-31A</td>
                 <td>Feb 24 1969</td>
                 <td>Let's have no unscheduled water dumps on the F mission</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-32A</td>
                 <td>Feb 24 1969</td>
                 <td>Some things about MSFN orbit determination</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-34A</td>
@@ -2266,145 +2332,169 @@ title: Tindallgrams
                 <td>69-PA-T-35A</td>
                 <td>Feb 26 1969</td>
                 <td>F/G Mirror Image Targeting shall use a three-minute delay</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-36A</td>
                 <td>Feb 26 1969</td>
                 <td>Review of the Launch Phase Abort Mission Techniques Document for Missions F and G</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-37A</td>
                 <td>Feb 27 1969</td>
                 <td>Some more trivia for the F mission</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-39A</td>
                 <td>Feb 28 1969</td>
                 <td>Some MPAD work needed for the G mission</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-40A</td>
                 <td>Feb 28 1969</td>
                 <td>There will be no VHF ranging data collected while tracking the LM on the lunar surface</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-42A</td>
                 <td>Mar 7 1969</td>
                 <td>G Lunar Surface stuff is still incomplete</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-44A</td>
                 <td>Mar 14 1969</td>
                 <td>Happiness is having plenty of hydrogen</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-45A</td>
                 <td>Mar 12 1969</td>
                 <td>Simplification to the pre-PDI abort procedure</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-52A</td>
                 <td>Apr 1 1969</td>
                 <td>PGNCS operations while on the lunar surface</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-53A</td>
                 <td>Apr 3 1969</td>
                 <td>Some G Mission Techniques action items</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-54A</td>
                 <td>Apr 4 1969</td>
-                <td>RL$ Determination</td>
-                <td>2</td>
+                <td>RLS Determination</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-55A</td>
                 <td>Apr 4 1969</td>
                 <td>AGS alignments in lunar orbit and operations on the lunar surface</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-56A</td>
                 <td>Apr 8 1969</td>
                 <td>Some things about Ascent from the moon</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-58A</td>
                 <td>Apr 10 1969</td>
                 <td>Descent monitoring at MCC</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-59A</td>
+                <td>Apr 11 1969</td>
+                <td>F Rendezvous Mission Techniques Clean-up</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-61A</td>
                 <td>Apr 15 1969</td>
                 <td>Let's drop one of the lunar surface RR tests</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-62A</td>
+                <td>Apr 23 1969</td>
+                <td>F mission rule regarding DPS gimbal drive failure indication</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-63A</td>
                 <td>Apr 15 1969</td>
                 <td>Some things about Descent</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-64A</td>
                 <td>Apr 16 1969</td>
                 <td>How the MSFN and sextant data are used to target DOI and Descent</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
-                <td>69-PA-T-<62A/td>
-                <td>Apr 23 1969</td>
-                <td>F mission rule regarding DPS gimbal drive failure indication</td>
-                <td>2</td>
+                <td>69-PA-T-66A</td>
+                <td>Apr 30 1969</td>
+                <td>What's descent al about?</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-67A</td>
+                <td>May 1 1969</td>
+                <td>Descent Aborts and subsequent Rendezvous Mission Techniques</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-69A</td>
                 <td>May 2 1969</td>
                 <td>CSM rendezvous navigation works fine using just VHF ranging</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-70A</td>
                 <td>May 5 1969</td>
                 <td>Descent Monitoring Mission Techniques - a status report</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-71A</td>
                 <td>May 6 1969</td>
                 <td>Ascent newsletter</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-72A</td>
                 <td>May 6 1969</td>
                 <td>Comments on IMU compensation procedures</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-73A</td>
+                <td>May 7 1969</td>
+                <td>Apollo Mission Techniques Documentation Schedule</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-74A</td>
                 <td>May 8 1969</td>
-                <td>The LM4 RR/LGC interface may be broken, but that's okay - sort_</td>
-                <td>2</td>
+                <td>The LM4 RR/LGC interface may be broken, but that's okay - sorta</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-75A</td>
                 <td>May 12 1969</td>
                 <td>Cis-lunar state vector updating procedure change</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-76A</td>
@@ -2416,49 +2506,55 @@ title: Tindallgrams
                 <td>69-PA-T-77A</td>
                 <td>May 12 1969</td>
                 <td>Manual Steering for LM Ascent</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-78A</td>
                 <td>May 15 1969</td>
                 <td>Some "improvements" in the Descent preparation procedures</td>
-                <td>2</td>
+                <td>2, 5</td>
+            </tr>
+            <tr>
+                <td>69-PA-T-81A</td>
+                <td>May 26 1969</td>
+                <td>Attention worthy Descent Program Anomaly</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>69-PA-T-82A</td>
                 <td>May 28 1969</td>
                 <td>Descent, Lunar Surface, and Ascent Mission Techniques with the H crew</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-83A</td>
                 <td>May 29 1969</td>
                 <td>DPS low level propellant light</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-84A</td>
                 <td>Jun 4 1969</td>
                 <td>G Rendezvous Navigation OJT is proposed</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-87A</td>
                 <td>Jun 5 1969</td>
                 <td>PRN ranging in lunar orbit is unnecessary</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-92A</td>
                 <td>Jun 11 1969</td>
                 <td>CSM Rescue Mission Techniques are complete and clean</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-93A</td>
                 <td>Jun 13 1969</td>
                 <td>Some significant LUMINARY program changes you should know about</td>
-                <td>2</td>
+                <td>2, 5</td>
             </tr>
             <tr>
                 <td>69-PA-T-94A</td>
