--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ title: Tindallgrams
 
     <p>Sources:</p>
     <table>
+        <tbody>
         <tr>
             <td>1</td>
             <td>
@@ -79,9 +80,18 @@ title: Tindallgrams
                 <a href="http://web.mit.edu/digitalapollo/Documents/Chapter7/tindallgrams.pdf">http://web.mit.edu/digitalapollo/Documents/Chapter7/tindallgrams.pdf</a>
             </td>
         </tr>
+        </tbody>
     </table>
 
-    <table>
+    <table class="main-index">
+        <thead>
+            <tr>
+                <th>Serial #</th>
+                <th>Date</th>
+                <th>Subject</th>
+                <th>Sources</th>
+            </tr>
+        </thead>
         <tbody>
             <tr>
                 <td>66-FM1-59</td>
@@ -105,7 +115,7 @@ title: Tindallgrams
             <tr>
                 <td>66-FM1-68</td>
                 <td>May 31 1966</td>
-                <td>Apollo  spacecraft  computer  program development  newsletter </td>
+                <td><a href="66-FM1-68.html">Apollo  spacecraft  computer  program development  newsletter</a></td>
                 <td>7</td>
             </tr>
             <tr>
@@ -117,7 +127,7 @@ title: Tindallgrams
             <tr>
                 <td>66-FM1-75</td>
                 <td>Jun 13 1966</td>
-                <td>Apollo  spacecraft  cornputer  programs--or, a  bucket of worms</td>
+                <td>Apollo  spacecraft  computer  programs--or, a  bucket of worms</td>
                 <td>7</td>
             </tr>
             <tr>
