--- a/66-FM1-64.html
+++ b/66-FM1-64.html
@@ -1,3 +1,7 @@
+---
+layout: tindallgram
+title: 66-FM1-64
+---
 <header>
     <div class="to">TO: FM4/Chief, Mathematical Physics Branch</div>
     <div class="from">FROM: FM1/Assistant Chief, Mission Planning and Analysis Division</div>
