--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ title: Tindallgrams
             <tr>
                 <td>66-FM1-64</td>
                 <td>May 27 1966</td>
-                <td>CSM orbit determination using the LEM radar</td>
+                <td><a href="66-FM1-64.html">CSM orbit determination using the LEM radar</a></td>
                 <td>2</td>
             </tr>
             <tr>
@@ -121,19 +121,19 @@ title: Tindallgrams
             <tr>
                 <td>66-FM1-70</td>
                 <td>Jun 2 1966</td>
-                <td>Spacecraft computer program status report</td>
+                <td><a href="66-FM1-70.html">Spacecraft computer program status report</a></td>
                 <td>2</td>
             </tr>
             <tr>
                 <td>66-FM1-75</td>
                 <td>Jun 13 1966</td>
-                <td>Apollo  spacecraft  computer  programs--or, a  bucket of worms</td>
+                <td><a href="66-FM1-75.html">Apollo  spacecraft  computer  programs--or, a  bucket of worms</a></td>
                 <td>7</td>
             </tr>
             <tr>
                 <td>66-FM1-78</td>
                 <td>Jul 1 1966</td>
-                <td>Another Apollo spacecraft computer program status report</td>
+                <td><a href="66-FM1-78.html">Another Apollo spacecraft computer program status report</a></td>
                 <td>7</td>
             </tr>
             <tr>
