Add front-matter and links for additions

--- a/66-FM1-85.html
+++ b/66-FM1-85.html
@@ -1,3 +1,7 @@
+---
+layout: tindallgram
+title: 66-FM1-85
+---
 <header>
     <div class="to">TO: FM4/Chief, Mathematical Physics Branch</div>
     <div class="from">FROM: FM/Deputy Chief, Mission Planning and Analysis Division</div>
