--- a/66-FM1-84.html
+++ b/66-FM1-84.html
@@ -1,3 +1,7 @@
+---
+layout: tindallgram
+title: 66-FM1-84
+---
 <header>
     <div class="to">TO: See list</div>
     <div class="from">FROM: FM/Deputy Chief, Mission Planning and Analysis Division</div>
