--- a/66-FM1-83.html
+++ b/66-FM1-83.html
@@ -25,11 +25,11 @@ on in the CSM, or in the LEM during a CSM rescue, this doesn't look so
 hot.</p>
 
 <p>First of all, the computer may really have a better defined state vector
-for its oen spacecraft, making it more desirable to update the state vector 
+for its own spacecraft, making it more desirable to update the state vector 
 of the other vehicle. Therefore, pilot control is needed over which
 spacecraft state vector should be updated based on the radar and optical
 observations. This will allow the pilot to exercise his best judgment
-as opposed to providing some sort of autonmatic logic built into the computer 
+as opposed to providing some sort of automatic logic built into the computer 
 program. Also, if the other vehicle maneuvers, the computer won't
 know it unless informed by some external source, like the crew. For this
 reason and others, it is also necessary to include in both the CSM and
@@ -50,6 +50,6 @@ pilot will interrupt the computer program at the time it is planned that
 the other vehicle will make the maneuver, which will cause the computer
 to reject all tracking data until the actual ΔV of the maneuver is input.
 He will have to get this information by voice from the other spacecraft
-after the manneuver is executed, of course. This procedure will assure
+after the maneuver is executed, of course. This procedure will assure
 that the quantities which are input are the most accurate available and
 should assure that the observational data is used properly.</p>
