--- a/66-FM1-84.html
+++ b/66-FM1-84.html
@@ -6,7 +6,7 @@
     <div class="subject">SUBJECT: Capability to do orbit navigation in earth orbit will not be implemented for AS-207 or AS-504.</div>
 </header>
 
-<p>MIT currently has plans for suppling a number of different modes for
+<p>MIT currently has plans for supplying a number of different modes for
 using their basic orbit determination program. (MIT calls this process
 "navigation," so I will, too.) These modes differ in that there is a
 variety of types of observational data used during different mission
@@ -15,10 +15,10 @@ phases.</p>
 <p>In our attempt to simplify the AS-504 spacecraft computer program, we
 are reviewing the overall situation to determine that no unnecessary
 modes are included. For example, there is no need to perform orbit
-navigation while in earth orbit for the lunar mssion or any recognized
+navigation while in earth orbit for the lunar mission or any recognized
 contingency situation. This particular orbit navigation mode was to
 utilize star/landmark observations along with other earth orbital service 
-routines aan special initialization capabilities to determine the
+routines and special initialization capabilities to determine the
 spacecraft state vector prior to the translunar injection maneuver.
 Since this program is not required for the lunar mission, MIT will be
 directed not to include it in the AS-504 program. Since we do not intend 
