--- a/66-FM1-85.html
+++ b/66-FM1-85.html
@@ -7,7 +7,7 @@
 </header>
 
 <p>Jim, this is just a reminder of conversations with you and Emil about
-a job I'd like your people to do. In th£nking more about this orbit
+a job I'd like your people to do. In thinking more about this orbit
 determination task wherein the LEM determines the CSM orbit while sitting
 on the lunar surface, I wonder if perhaps MIT has lost sight of our primary 
 objectives, thus leading them to the conclusion that they should use
@@ -41,5 +41,5 @@ our best source of relative orbit determination for this particular mission
 phase may be by the <span class="ul">LEM</span> radar data. I doubt if the CSM will ever
 see the LEM on the surface, at least we'd better not count on it, and the
 MSFN tracking certainly can't figure out where the LEM is. Our other
-source is the G&amp;N state vector T/M at LEM touchdown, which is probably ·
+source is the G&amp;N state vector T/M at LEM touchdown, which is probably 
 the best, if the antenna are pointed at us.</p>
