--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@ title: Your New Jekyll Site
 <div id="home">
   <h1>Blog Posts</h1>
   <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% for post in site.pages %}
+    	{% if post.serial != nil %}
+      <li><span>{{ post.date | date_to_string }}</span> {{ post.serial }} <a href="{{ post.url }}">{{ post.subject }}</a></li>
+        {% endif %}
     {% endfor %}
   </ul>
 </div>
