Add include for nav header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: Your New Jekyll Site
 <div id="home">
 
   <h1>Tindallgrams</h1>
+  <div class="subtitle">The snarky memos of Apollo’s “Unsung Genius”</div>
 
   <div class="bigquote">
     “Well, I just got back from MIT with my weekly quota of new ulcers, which I thought might interest you.”
