--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Your New Jekyll Site
 <div id="home">
 
   <h1>Tindallgrams</h1>
-  <div class="subtitle">The snarky memos of Apollo’s “Unsung Genius”</div>
+  <div class="subtitle">The snarky memos of Apollo’s unsung genius</div>
 
   <div class="bigquote">
     “Well, I just got back from MIT with my weekly quota of new ulcers, which I thought might interest you.”
@@ -15,6 +15,8 @@ title: Your New Jekyll Site
   </div>  
 
   <p>In 1966, as the American space program was working furiously towards a moon landing, Howard W. “Bill” Tindall, Jr., arrived at MIT to oversee the development of software for the spacecraft guidance systems. Guidance systems where revoutionary, there was controversy over how astronauts and computers would share control of the spaceflights, and software was a new aspect of systems engineering whose importance was vastly underappreciated. Tindall found a lot of brilliant people at MIT working in development program that was behind schedule, was failing to meet its requirements, and threatened to become, in his words, “the most pacing item for the Apollo flights.” He dove into the task of refashioning every aspect of the software development process, writing a series of frank memos that entered NASA lore under the name “Tindalgrams.”</p>
+
+  <p>Flight Director Gene Kranz said of Tindall “if there should have been a lunar plaque left on the Moon from somebody in Mission Control or Flight Control - it should have been for Bill Tindall. Tindall was the guy who put all the pieces together, and all we did is execute them.”
 
 
   <h2>Index of Tindallgrams</h2>
