Add placeholder text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Your New Jekyll Site
   <div class="subtitle">The snarky memos of Apollo’s unsung genius</div>
 
   <div class="ddg-search">
-    {% ddg_search site:tindallgrams.net %}
+    {% ddg_search site:tindallgrams.net prefill:Search+Tindallgrams %}
   </div>
 
 
