Move DDG search to an include

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@ title: Your New Jekyll Site
   <h1>Tindallgrams</h1>
   <div class="subtitle">The snarky memos of Apollo’s unsung genius</div>
 
-  <div class="ddg-search">
-    {% ddg_search site:tindallgrams.net prefill:Search+Tindallgrams %}
-  </div>
-
+  {% include ddg.html %}
 
   <div class="bigquote">
     “Well, I just got back from MIT with my weekly quota of new ulcers, which I thought might interest you.”
