Add link to yearly index

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ title: Your New Jekyll Site
 
   <p>Flight Director Gene Kranz said of Tindall “if there should have been a lunar plaque left on the Moon from somebody in Mission Control or Flight Control - it should have been for Bill Tindall. Tindall was the guy who put all the pieces together, and all we did is execute them.”
 
+  <h2><a href="/year">Index by Year</a></h2>
 
-  <h2>Index of Tindallgrams</h2>
+  <h2>Selected Tindallgrams</h2>
   {% tgramlist %}
 
 </div>
