Add count of done Tindallgrams and Hoe to contribute page

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@ title: Your New Jekyll Site
 
   <p>Flight Director Gene Kranz said of Tindall “if there should have been a lunar plaque left on the Moon from somebody in Mission Control or Flight Control - it should have been for Bill Tindall. Tindall was the guy who put all the pieces together, and all we did is execute them.”
 
-  <div class="index-list">
-    Index by <a href="/year">Year</a> | <a href="/source">Source</a>
-  </div>
+  <h2>Progress</h2>
+
+  <p>Tindallgrams (known) converted to text: {% tgindex_summary %}. <a href="/contribute">How you can contribute.</a></p>
 
   <h2>Selected Tindallgrams</h2>
+
+  <p>
+    Also see indices by <a href="/year">year</a> and <a href="/source">source</a>.
+  </p>
+
   {% tgramlist %}
 
 </div>
