--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Your New Jekyll Site
   <h2>Selected Tindallgrams</h2>
 
   <p>
-    Also see indices by <a href="/year">year</a> and <a href="/source">source</a>.
+    Also see indices by <a href="/year">year</a>, <a href="/source">source</a>, and <a href="/topics">topic</a>.
   </p>
 
   {% tgramlist %}
