--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@ title: Home
 
   {% include ddg.html %}
 
-  <div class="bigquote">
+  <aside class="bigquote">
     “Well, I just got back from MIT with my weekly quota of new ulcers, which I thought might interest you.”
 
     <div class="dated">Bill Tindall, <a href="66-FM1-75.html">June 13 1966</a></div>
-  </div>  
+  </aside>  
 
+  <main role="main">
   <p>In 1966, as the American space program was working furiously towards a moon landing, Howard W. “Bill” Tindall, Jr., an expert on orbital mechanics, was sent by NASA to MIT to oversee the development of software for the spacecraft guidance systems. Tindall found a lot of brilliant people at MIT working in development program that was behind schedule, was failing to meet its requirements, and threatened to become, in his words, “the most pacing item for the Apollo flights.” He dove into the task of refashioning every aspect of the software development process, writing a series of frank memos that entered NASA lore under the name “Tindallgrams” that continued as he moved on to lead the planning of all “mission techniques” for Apollo.</p>
 
   <p>Flight Director Gene Kranz said of Tindall “if there should have been a lunar plaque left on the Moon from somebody in Mission Control or Flight Control - it should have been for Bill Tindall. Tindall was the guy who put all the pieces together, and all we did is execute them.”
@@ -32,4 +33,5 @@ title: Home
 
   {% tgramlist %}
 
+  </main>
 </div>
